chore: update vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+    "builds": [
+        {
+            "src": "./index.mjs",
+            "use": "@vercel/node"
+        }
+    ],
     "rewrites": [
         {
             "source": "/(.*)",
