--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "static-clash-asset-server",
   "version": "1.0.0",
   "description": "API to serve static Clash of Clans assets",
-  "main": "api/index.mjs",
-  "type": "module",
+  "keywords": [],
+  "license": "ISC",
+  "author": "",
+  "main": "api/index.js",
   "scripts": {
     "start": "node ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "yarn@3.2.1",
   "dependencies": {
-    "@fastify/static": "^5.0.2",
-    "fastify": "^3.29.0"
-  }
+    "express": "^4.18.1"
+  },
+  "packageManager": "yarn@3.2.1"
 }
