--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "./api/index.mjs",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/api"
+            "source": "/static/(.*)",
+            "destination": "/static"
         }
     ]
 }
