chore: change prefix to `/api`

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
         {
-            "source": "/static/(.*)",
-            "destination": "/static"
+            "source": "/api/(.*)",
+            "destination": "/api"
         }
     ]
 }
